seldon/seldon-core-operator/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
  name: seldon-operator-controller-manager
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: seldon-core-operator
      app.kubernetes.io/name: seldon-core-operator
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
  serviceName: seldon-operator-controller-manager-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: seldon-core-operator
        app.kubernetes.io/name: seldon-core-operator
        control-plane: controller-manager
        controller-tools.k8s.io: "1.0"
    spec:
      containers:
      - command:
        - /manager
        image: docker.io/seldonio/seldon-core-operator:0.3.0
        imagePullPolicy: Always
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 9876
          name: webhook-server
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
        volumeMounts:
        - mountPath: /tmp/cert
          name: cert
          readOnly: true
      serviceAccountName: seldon-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: seldon-operator-webhook-server-secret
