seldon/seldon-core-operator/base/volume_claim_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seldon-operator-controller-manager
  namespace: kubeflow  
spec:
  volumeClaimTemplates: []
