seldon/seldon-core-operator/base/seldon-operator-controller-manager-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: seldon-core-operator
    app.kubernetes.io/name: seldon-core-operator
    control-plane: seldon-controller-manager
    controller-tools.k8s.io: "1.0"
  name: seldon-operator-controller-manager-service
  namespace: kubeflow
spec:
  ports:
  - port: 443
  selector:
    control-plane: seldon-controller-manager
    controller-tools.k8s.io: "1.0"
