seldon/seldon-core-operator/base/webhook-server-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: seldon-core-operator
    app.kubernetes.io/name: seldon-core-operator
    control-plane: seldon-controller-manager
    controller-tools.k8s.io: "1.0"
    helm.sh/chart: seldon-core-operator-0.4.0
  name: webhook-server-service
  namespace: kubeflow
spec:
  ports:
  - port: 443
    targetPort: 9876
  selector:
    control-plane: seldon-controller-manager
